--- a/views/tmdb-data.ejs
+++ b/views/tmdb-data.ejs
@@ -196,8 +196,9 @@
         <% } %>
       </form>
     </div>
+    <% } %>
 
-    <!-- Movies Table -->
+    <!-- Movies Table (shared for both views) -->
     <div class="bg-white dark:bg-gray-800 rounded-lg shadow overflow-hidden">
       <% if (typeof movies !== 'undefined' && movies.length > 0) { %>
         <div class="overflow-x-auto">
@@ -425,7 +426,6 @@
         </div>
       <% } %>
     </div>
-    <% } %>
     </main>
   </div>
 
